k8s/auth.yaml
# Deployment for Hello-World App
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  labels:
    app: auth 
spec:
# ändra till en 1 replica för att testa
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: gitlab.lnu.se:5050/2dv013/student/team-2024-14-minccino/user-service/user-service:latest
          ports:
            - containerPort: 8088
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8088
  selector:
    app: auth
