k8s/mongodb.yaml
# This service is created to be able to tunnel in to MongoDB in development. In production the ingress server
# should not expose this service.
apiVersion: v1
kind: Service
metadata:
  labels:
    service.name: mongodb
  name: mongodb
spec:
  ports:
    - name: "27017"
      port: 27017
      targetPort: mongo-port
  selector:
    deployment.name: mongodb
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    deployment.name: mongodb
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment.name: mongodb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        deployment.name: mongodb
    spec:
      containers:
        - image: mongo:latest
          name: mongodb
          ports:
            - containerPort: 27017
              name: mongo-port
          resources: {}
          volumeMounts:
            - mountPath: /data/db
              name: mongodb-claim
      restartPolicy: Always
      volumes:
        - name: mongodb-claim
          persistentVolumeClaim:
            claimName: mongodb-claim
