k8s/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  replicas: 1  # Om du inte behöver flera instanser, eller öka till 2 om du vill ha redundans.
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - containerPort: 5672  # Standard port för RabbitMQ
            - containerPort: 15672 # Management interface
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  ports:
    - name: amqp-port
      port: 5672
      targetPort: 5672
    - name: management-port
      port: 15672
      targetPort: 15672
  selector:
    app: rabbitmq
